# MiSeq_Scripts

./: README
cpp/: README  makeAln.cpp
cpp/apps/dfi/: README  dfi.cpp
cpp/apps/dfi/example/: fasta1.fa  fasta2.fa
cpp/apps/insegt/: README  base.h  insegt.cpp  overlap_module.h  read_gff.h  read_gtf.h
cpp/apps/mason/: README  mason.cpp  mason.h  simulate_454.h  simulate_illumina.h  simulate_sanger.h  store_config.h  util.h
cpp/apps/micro_razers/: README  micro_razers.cpp
cpp/apps/pair_align/: pair_align.cpp
cpp/apps/rabema/: build_gold_standard.h  build_gold_standard_options.h  curve_smoothing.h  evaluation.h  evaluation_options.h  find_approx_dp_quality.h  find_hamming_simple_ext.h  find_hamming_simple_quality.h  find_myers_ukkonen_ext.h  find_myers_ukkonen_reads.h  intervals.h  rabema.cpp  rabema.h  verification.h  wit_store.h  witio.h
cpp/apps/razers/: outputFormat.h  paramChooser.h  razers.cpp  razers.h  razers_matepairs.h  razers_spliced.h
cpp/apps/razers/example/: reads.fa.result
cpp/apps/razers2/: outputFormat.h  paramChooser.h  razers.cpp  razers.h  razers_matepairs.h  readSimulator.h
cpp/apps/rep_sep/: assembly_parser.h  column_scanner.h  rep_sep.cpp  rgraph_base.h  rgraph_construction.h  rgraph_heuristics.h  utils.h
cpp/apps/sak/: sak.cpp
cpp/apps/seqan_tcoffee/: seqan_tcoffee.cpp
cpp/apps/seqcons/: read_simulator.R  seqcons.cpp
cpp/apps/snp_store/: Readme.txt  snp_store.cpp  snp_store.h
cpp/apps/splazers/: README  outputFormat.h  razers.h  razers_matepairs.h  razers_spliced.h  readSimulator.h  splazers.cpp
cpp/apps/stellar/: README  stellar.cpp  stellar.h  stellar_extension.h  stellar_output.h  stellar_types.h
cpp/apps/tree_recon/: tree_recon.cpp
cpp/cmake/: CMakeLists.txt
cpp/cmake/CMake/: FindTR1.cmake
cpp/cmake/apps/: CMakeLists.txt
cpp/cmake/demos/: CMakeLists.txt
cpp/cmake/tests/: CMakeLists.txt
cpp/demos/: .makeAln.cpp.swp  Makefile  alignment.cpp  alignment_local.cpp  alignment_msa.cpp  alphabet.cpp  barcodes.txt  blast_report.cpp  file_format.cpp  find_approx.cpp  find_exact.cpp  find_motif.cpp  find_wild.cpp  gff2gtf.cpp  graph_algo_bfs.cpp  graph_algo_dfs.cpp  graph_algo_his.cpp  graph_algo_lcs.cpp  graph_algo_lis.cpp  graph_algo_path_allpairs.cpp  graph_algo_path_bellmanford.cpp  graph_algo_path_dag.cpp  graph_algo_path_dijkstra.cpp  graph_algo_path_floydwarshall.cpp  graph_algo_path_transitive.cpp  graph_algo_scc.cpp  graph_algo_topsort.cpp  graph_algo_tree_kruskal.cpp  graph_algo_tree_prim.cpp  graph_hmm.cpp  graph_hmm_silent.cpp  index_find.cpp  index_find_stringset.cpp  index_maxrepeats.cpp  index_mums.cpp  index_node_predicate.cpp  index_qgram_counts.cpp  index_sufarray.cpp  index_supermaxrepeats.cpp  interval_tree.cpp  (+11 more)
cpp/demos/extra/: pizzachili.cpp
cpp/demos/tutorial/: Makefile  chop_files.pl  find_motif.cpp  find_motif_pms1.cpp
cpp/demos/tutorial/alignments/: alignment_gaps.cpp  alignment_msa.cpp  alignment_msa_assignment1.cpp  alignment_pairwise_global.cpp  alignment_pairwise_global2.cpp  alignment_pairwise_global_assignment1.cpp  alignment_pairwise_global_assignment2.cpp  alignment_pairwise_local.cpp  alignment_pairwise_local_assignment1.cpp
cpp/demos/tutorial/basics/: show_alphabets.cpp  swap.cpp
cpp/demos/tutorial/graph/: graph_algo_scc.cpp  graph_dijkstra.cpp  graph_hmm.cpp
cpp/demos/tutorial/howto/: clip_alignments.cpp
cpp/demos/tutorial/random/: random_examples.cpp
cpp/demos/tutorial/read_mapping/: minimapper.cpp
cpp/demos/tutorial/seeds/: seeds_extend_bandedAlign.cpp
cpp/demos/tutorial/sequence/: sequence_all_strings.cpp  sequence_iterator_demo.cpp
cpp/docs/: ADAPTION.char+array.html  ADAPTION.std_3a_3a_F_I_L_E+_2a.html  ADAPTION.std_3a_3abasic__string.html  ADAPTION.std_3a_3aiostream.html  ADAPTION.std_3a_3alist.html  ADAPTION.std_3a_3avector.html  CLASS_Align.html  CLASS_Align_Cols.html  CLASS_Align_Config.html  CLASS_Align_Quality_Store_Element.html  CLASS_Aligned_Read_Layout.html  CLASS_Aligned_Read_Store_Element.html  CLASS_Allocator.html  CLASS_Async_Request.html  CLASS_Auto_Seq_Format.html  CLASS_Blast_Hit.html  CLASS_Blast_Hsp.html  CLASS_Blast_Report.html  CLASS_Bundle2.html  CLASS_Bundle3.html  CLASS_Bundle5.html  CLASS_Command_Line_Option.html  CLASS_Command_Line_Parser.html  CLASS_Concatenator_Many_To_One.html  CLASS_Contig_File.html  CLASS_Contig_Store_Element.html  CLASS_Dequeue.html  CLASS_Edge_Stump.html  CLASS_External+_Property+_Map.html  CLASS_File.html  CLASS_File_Format.html  CLASS_Finder.html  CLASS_Fragment.html  CLASS_Fragment_Store.html  CLASS_Frequency_Distribution.html  CLASS_Functor_Complement.html  CLASS_Functor_Convert.html  CLASS_Functor_Lowcase.html  CLASS_Functor_Upcase.html  CLASS_Gap_Anchor.html  (+1419 more)
cpp/example/: README  barcodes.txt  library.fa  run.sh
example/: README  add.sh
example/data/: barcodes.fasta  library.fasta  library.lst
example/scripts/: label.pl  label.sh  plot.r
perl/: both.pl  getId.pl  getQuality.pl  indexIds.pl  makeAlign.pl  readAlign.pl
rpgms/: analyze.r
